--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
     "test": "jest",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
@@ -40,10 +41,12 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.4.0",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
     "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "pino": "^10.0.0"
   }
