--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "pino": "^10.0.0"
   }
 }
