ci: change worflow name and your steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Start server
       run: |
-        npm run serve &
+        npm run start &
         sleep 5  # Give the server some time to start
 
     - name: Health Check
