--- a/package.json
+++ b/package.json
@@ -49,10 +49,12 @@
   },
   "dependencies": {
     "archiver": "^7.0.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "pino": "^10.0.0",
     "supertest": "^7.1.4"
   },
